--- a/src/home/style.css
+++ b/src/home/style.css
@@ -1,6 +1,5 @@
 .wrapper {
     background-color: #fdfdfd; 
-    padding: 20px 0;
   }
   
   .content-container {
@@ -17,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
+    gap: 30px;
     background-color: #0b0d17;
    color: white;
   }
@@ -24,21 +24,13 @@
   .logo {
     font-size: 20px;
     font-weight: bold;
-    color: #333;
   }
   
   .nav {
     display: flex;
-    gap: 20px;
+    gap: 40px;
+    list-style-type: none;
   }
-  
-  .nav-link {
-    text-decoration: none;
-    color: white;
-    font-size: 14px;
-    font-weight: 500;
-  }
-  
   .clone-project {
     color: #ff7e29;
     font-weight: bold;
@@ -47,7 +39,7 @@
   
   .service-section {
     padding: 40px 20px;
-  }
+  } 
   
   .service-content {
     text-align: left;
@@ -79,14 +71,16 @@
   .service-images {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
   }
   
   .service-img {
-    width: 100%;
-    max-width: 360px;
-    height: auto;
-    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 40%;
+    max-width: 480px;
+   
+   
   }
   
 
