--- a/src/pages/layout/login.css
+++ b/src/pages/layout/login.css
@@ -1,4 +1,8 @@
-
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
 .login-container {
     width: 300px;
     margin: 0 auto;
@@ -40,4 +44,44 @@
   button:hover {
     background-color: #45a049;
   }
+   
   
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 300px;
+  text-align: center;
+  position: relative;
+}
+.btn{
+  transform: translate(700px);
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
